# Aqi

./: .replit  App.py  api_client.py  constants.py  data_handler.py  data_loader.py  data_updater.py  database.py  db_operations.py  debug_server.py  map_utils.py  prediction_model.py  pyproject.toml  reinitialize_db.py  utils.py  visualization.py
pages/: 1_City Comparison.py  2_Historical Data.py  3_Prediction Alert.py  4_Long-Term_Prediction.py
