[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "folium>=0.19.5",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.44.0",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "xgboost>=3.0.0",
    "tensorflow>=2.14.0",
]
